--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,12 +35,14 @@ jobs:
         run: echo "version=$(yarn info playwright --json | jq -r ".children.Version")" >> $GITHUB_OUTPUT
 
       - name: Cache Playwright browsers
+        id: cache-playwright-browsers
         uses: actions/cache@v4
         with:
           path: ~/.cache/ms-playwright
           key: playwright-${{ runner.os }}-${{ runner.arch }}-${{ steps.playwright-version.outputs.version }}
 
       - name: Install Playwright browsers
+        if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
         run: yarn playwright install --with-deps
 
       - name: Run Playwright tests
