--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "txtracer-core": "^0.3.1"
   },
   "devDependencies": {
-    "@astrojs/check": "0.9.4",
-    "@astrojs/markdown-remark": "5.3.0",
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/starlight": "0.29.3",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/markdown-remark": "^6.3.8",
+    "@astrojs/react": "^4.4.0",
+    "@astrojs/starlight": "^0.36.0",
     "@eslint/js": "^9.25.0",
     "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -62,7 +62,7 @@
     "@types/ws": "^8.5.10",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/ui": "^3.1.3",
-    "astro": "4.16.19",
+    "astro": "^5.14.4",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.3.4",
@@ -83,9 +83,9 @@
     "remark-custom-heading-id": "2.0.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "sharp": "0.34.4",
-    "starlight-links-validator": "^0.12.1",
-    "starlight-llms-txt": "^0.5.0",
-    "starlight-theme-rapide": "^0.2.1",
+    "starlight-links-validator": "^0.18.0",
+    "starlight-llms-txt": "^0.6.0",
+    "starlight-theme-rapide": "^0.5.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
