--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
         run: yarn run fmt:check
 
       - name: Run eslint
-        run: yarn run lint
+        run: yarn run lint:ts
+
+      - name: Run stylelint
+        run: yarn run lint:css
 
       - name: Build project
         run: yarn run build:all
