--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite --port 5174",
     "build": "tsc -b && vite build",
     "build:all": "yarn build && yarn astro:build",
-    "lint": "eslint --max-warnings 0 . --cache",
+    "lint": "yarn run lint:ts && yarn run lint:css",
+    "lint:ts": "eslint --max-warnings 0 . --cache",
+    "lint:css": "stylelint '**/*.css' --cache",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist --nojekyll",
     "fmt": "prettier --write -l --cache .",
@@ -86,6 +88,9 @@
     "starlight-links-validator": "^0.18.0",
     "starlight-llms-txt": "^0.6.0",
     "starlight-theme-rapide": "^0.5.1",
+    "stylelint": "^16.24.0",
+    "stylelint-config-css-modules": "^4.5.1",
+    "stylelint-config-standard": "^39.0.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
