--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ton-community/func-js": "^0.9.1",
     "@ton/core": "^0.61.0",
     "@ton/crypto": "^3.3.0",
-    "@ton/sandbox": "^0.36.0",
+    "@ton/sandbox": "^0.41.0",
     "@ton/test-utils": "^0.7.0",
     "@ton/tolk-js": "^1.1.0",
     "@truecarry/tlb-abi": "^0.2.0",
@@ -46,8 +46,9 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "ton-assembly": "0.2.4",
-    "txtracer-core": "^0.3.1"
+    "ton-assembly": "0.6.1",
+    "ton-source-map": "^0.2.2",
+    "txtracer-core": "^0.5.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
